remote factories setup

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -13,3 +13,13 @@ runMode=LOCAL
 
 #Remote run mode - selenium grid, browserstack, selenoid
 remoteRunMode=SELENIUMGRID
+
+#selenium grid url
+seleniumGridURL=http://localhost:4444/wd/hub
+
+#selenoid url
+selenoidURL=http://localhost:4444/wd/hub
+
+#browserstack key and
+browserstackUsername = "YOUR_USERNAME";
+browserstackKey = "YOUR_ACCESS_KEY";
