mobile drivers setup

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -8,7 +8,7 @@ browser=CHROME
 #testURL=https://www.google.com
 URL=https://www.google.com
 
-#Run mode - local, remote
+#Run mode for web - local, remote
 runMode=LOCAL
 
 #Remote run mode - selenium grid, browserstack, selenoid
@@ -20,6 +20,13 @@ seleniumGridURL=http://localhost:4444/wd/hub
 #selenoid url
 selenoidURL=http://localhost:4444/wd/hub
 
-#browserstack key and
-browserstackUsername = "YOUR_USERNAME";
-browserstackKey = "YOUR_ACCESS_KEY";
+
+
+#Run mode for Mobile - local, remote
+runMobileMode=LOCAL
+
+#Remote run mode - selenium grid, browserstack, selenoid
+remoteMobileRunMode=BROWSERSTACK
+
+#local appium server url
+localAppiumURL=http://127.0.0.1:4723/wd/hub
